--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --port 3000 --config web/webpack.config.dev.js --inline --hot --colors --quiet"
+    "dev": "webpack-dev-server --port 3000 --config web/webpack.config.dev.js --inline --hot --colors --quiet",
+    "storybook": "start-storybook -p 9001 -c web/.storybook"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "url-loader": "0.5.7"
   },
   "devDependencies": {
+    "@kadira/storybook": "1.28.1",
     "babel-core": "6.9.1",
     "babel-loader": "6.2.4",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
