--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-web",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,9 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "0.14.8",
-    "react-dom": "0.14.8",
-    "react-native-web": "0.0.25",
+    "react-native-web": "^0.0.39",
+    "react": "^15.1.0",
     "url-loader": "0.5.7"
   },
   "devDependencies": {
