--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --port 3000 --config web/webpack.config.dev.js --inline --hot --colors --quiet",
-    "storybook": "start-storybook -p 9001 -c web/.storybook",
+    "storybook": "start-storybook -p 9001 -c web/.storybook"
   },
   "keywords": [],
   "author": "",
