--- a/package.json
+++ b/package.json
@@ -11,20 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-native-web": "^0.0.44",
-    "react": "^15.3.1",
+    "react-native-web": "0.0.49",
+    "react": "15.3.2",
     "url-loader": "0.5.7"
   },
   "devDependencies": {
-    "@kadira/storybook": "1.28.1",
-    "babel-core": "6.9.1",
-    "babel-loader": "6.2.4",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-1": "6.5.0",
-    "babel-runtime": "6.9.2",
-    "webpack": "1.13.1",
+    "@kadira/storybook": "2.5.1",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.14.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-react-native": "^1.9.0",
+    "webpack": "1.13.2",
     "webpack-dev-server": "1.14.1"
   }
 }
