--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-preset-react-native": "^1.9.0",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.14.1",
+    "babel-preset-stage-2": "^6.18.0",
     "eslint": "^3.4.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^6.1.2"
+    "eslint-plugin-react": "^6.1.2",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "1.14.1"
   }
 }
