--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
-    "babel-preset-react-native": "^1.9.0",
+    "babel-preset-react-native-stage-0": "^1.0.0",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.14.1",
     "eslint": "^3.4.0",
     "eslint-plugin-jsx-a11y": "^2.2.0",
     "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^6.1.2"
+    "eslint-plugin-react": "^6.1.2",
+    "react-hot-loader": "2.0.0-alpha-4"
   }
 }
